--- a/.obsidian/appearance.json
+++ b/.obsidian/appearance.json
@@ -2,5 +2,6 @@
   "accentColor": "#6baeff",
   "interfaceFontFamily": "Helvetica Neue",
   "textFontFamily": "Helvetica Neue",
-  "monospaceFontFamily": "Monaco"
+  "monospaceFontFamily": "Monaco",
+  "cssTheme": "Minimal"
 }
